k8/admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitoring-grafana-admin
spec:
  selector:
    app.kubernetes.io/instance: monitoring
    app.kubernetes.io/name: grafana
  ports:
    - port: 3000
      protocol: TCP
      nodePort: 30081
  type: LoadBalancer
