k8/coordinates.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: illegal-dump-coordinates
spec:
  replicas: 2
  selector:
    matchLabels:
      app: illegal-dump-coordinates
  template:
    metadata:
      labels:
        app: illegal-dump-coordinates
    spec:
      containers:
        - name: illegal-dump-coordinates
          image: kw4si0r/illegal-dump-coordinates
          ports:
            - containerPort: 8061
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8061
            initialDelaySeconds: 2
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8061
            initialDelaySeconds: 30
            periodSeconds: 30

---

apiVersion: v1
kind: Service
metadata:
  name: illegal-dump-coordinates
spec:
  # type: NodePort
  ports:
    - port: 8061
      targetPort: 8061
      # nodePort: 30061
      protocol: TCP
      name: http
  selector:
    app: illegal-dump-coordinates


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: illegal-dump-coordinates-mock
spec:
  replicas: 1
  selector:
    matchLabels:
      app: illegal-dump-coordinates-mock
  template:
    metadata:
      labels:
        app: illegal-dump-coordinates-mock
    spec:
      containers:
      - name: mock
        image: kw4si0r/illegal-dump-api-gateway-mock
        ports:
        - containerPort: 1080
---

apiVersion: v1
kind: Service
metadata:
  name: illegal-dump-coordinates-mock
spec:
  ports:
  - port: 1080
    targetPort: 1080
    protocol: TCP
    name: http
  selector:
    app: illegal-dump-coordinates-mock

---

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: illegal-dump-coordinates-routes
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  hostnames:
  # see /etc/hosts
  - "minikube.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/coordinates
    backendRefs:
    - name: illegal-dump-coordinates
      port: 8061
      weight: 80
    - name: illegal-dump-coordinates-mock
      port: 1080
      weight: 20
